--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,10 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "type": "commonjs",
+  "author": {
+    "name": "Jorge Jiménez"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -13,19 +17,21 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "react": "^18.2.0",
+    "@types/react": "^18.0.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react": "^18.2.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint-fix": "eslint --ext .ts,.tsx ./src --fix",
+    "lint": "eslint --ext .ts,.tsx ./src",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +50,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.56.0",
+    "husky": "^9.0.11"
   }
 }
