feat(app): init backend application
With mondodb and graphql, User resource was created

--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,8 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "lint-fix": "eslint --ext .ts,.tsx ./src --fix",
-    "lint": "eslint --ext .ts,.tsx ./src",
+    "lint-fix": "eslint --ext .ts,.tsx src --fix",
+    "lint": "eslint --ext .ts,.tsx src",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
