--- a/server/package.json
+++ b/server/package.json
@@ -29,9 +29,14 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "graphql": "^16.8.1",
     "joi": "^17.12.1",
     "mongoose": "^8.1.2",
+    "nestjs-pino": "^4.0.0",
+    "pino-http": "^9.0.0",
+    "pino-pretty": "^10.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
