--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,8 @@
     "class-validator": "^0.14.1",
     "graphql": "^16.8.1",
     "joi": "^17.12.1",
+    "migrate-mongo": "^11.0.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.2",
     "nestjs-pino": "^4.0.0",
     "pino-http": "^9.0.0",
@@ -47,6 +49,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/migrate-mongo": "^10.0.4",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
