--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,10 +19,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": "src",
   },
   "include": [
     "src",
     "**/*.ts",
     "**/*.tsx"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
