feat(client): add createuser mutation

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,13 +18,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
     "baseUrl": "src",
+    "jsx": "react-jsx"
   },
   "include": [
     "src",
     "**/*.ts",
     "**/*.tsx"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
