--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
